<resources>
    <string name="app_name">M I C A</string>
    <string name="rate_good">Rate Good</string>
    <string name="rate_poor">Rate Poor</string>
    <string name="post">Post</string>
    <string name="back">Back</string>
    <string name="Test_1">Test 1</string>
    <string name="Test_2">Test 2</string>
    <string name="Test_3">Test 3</string>
    <string name="Hint_Text">Mark Text . . .</string>
    <string name="action_map">Map</string>
    <string name="action_messages">Messages</string>
    <string name="action_post">Post</string>
    <string name="action_message">Message</string>
    <string name="add_mark">Add Mark</string>
    <string name="search_hint">Use @ to filter username</string>
    <string name="group_communicate">T E S T</string>

    <string name="nav_header_title">M I C A</string>
    <string name="nav_header_subtitle">Leave your mark</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="sign_in_title">Mica</string>
    <string name="sign_in_sub_title">Experience more</string>
    <string name="sign_in_username">Username</string>
    <string name="sign_in_password">Password</string>
    <string name="sign_in_button">Sign in</string>
    <string name="sign_in_new_user">New User? Sign up here</string>
    <string name="sign_in_trouble">Trouble signing in? Help is here</string>

    <string name="mLoading">Loading, please stand by.</string>
    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Please Login Below</string>
    <string name="enter">Enter</string>
    <string name="action_leave">Leave</string>
</resources>