<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/messagesFragment"
            android:icon="@drawable/ic_baseline_view_list_24"
            android:title="@string/action_messages" />
        <item
            android:id="@+id/mapFragment"
            android:icon="@drawable/ic_baseline_map_24"
            android:title="@string/action_map" />
        <item
            android:id="@+id/messageViewFragment"
            android:icon="@drawable/ic_baseline_message_24"
            android:title="@string/action_message" />
        <item
            android:id="@+id/postFragment"
            android:icon="@drawable/ic_baseline_add_circle_outline_24"
            android:title="@string/action_post" />
    </group>

    <item android:title="@string/group_communicate">
        <menu>
            <item
                android:id="@+id/t_1"
                android:icon="@drawable/ic_launcher_foreground"
                android:title="@string/Test_1" />
            <item
                android:id="@+id/t_2"
                android:icon="@drawable/ic_launcher_foreground"
                android:title="@string/Test_2" />
            <item
                android:id="@+id/t_3"
                android:icon="@drawable/ic_launcher_foreground"
                android:title="@string/Test_3" />
        </menu>
    </item>
</menu>